kubernetes/overlays/saas/base/arches-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: example-static-ip
    networking.gke.io/managed-certificates: arches-api-certificate
    networking.gke.io/v1beta1.FrontendConfig: arches-frontend-config
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-api
                port:
                  number: 443
